# sipin-mh-sip-creator-v2

./: .copier-answers.yml  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  config.yml  flake.nix  main.py  pyproject.toml  test_deserialize.py
.openshift/: Jenkinsfile  Makefile  sipin-mh-sip-creator-multibranch-pipeline.xml
app/: app.py  utils.py
app/helpers/: dummy_sip.py  mapping.py  template.py  utils.py
app/helpers/mappings/: __init__.py
app/helpers/mappings/v2_0/: __init__.py  material_artwork.py
app/helpers/mappings/v2_1/: __init__.py  basic.py  film.py  material_artwork.py
app/services/: pid.py  pulsar.py
app/templates/: amd_sections.jinja  base.jinja  dmd_sections.jinja  file_section.jinja
app/templates/profiles/: basic_struct_map.jinja  film_struct_map.jinja  material_artwork_struct_map.jinja
app/templates/v2_0/: base.jinja  dmd_sections.jinja  file_section.jinja  header.jinja
app/templates/v2_1/: amd_sections.jinja  base.jinja
app/templates/v2_1/profiles/: basic_struct_map.jinja  film_struct_map.jinja  material_artwork_struct_map.jinja
app/v2_1/: __init__.py  creator.py  langstrings.py  mh_sip.py
app/v2_1/profiles/: __init__.py  basic.py  common.py  film.py  helpers.py  material_artwork.py
app/v2_1/templates/: amd_sections.jinja  base.jinja  dmd_sections.jinja  file_section.jinja  header.jinja
app/v2_1/templates/profiles/: basic_struct_map.jinja  film_struct_map.jinja  material_artwork_struct_map.jinja
tests/: conftest.py  test_template.py  test_template_3d.py  test_template_3d_sample.py
tests/resources/: film_sip.xml
tests/service/: conftest.py  test_service.py
tests/v2_1/: test_examples.py
