[project]
name = "sipin-mh-sip-creator-v2"
version = "0.0.1"
description = "Service that creates a Mediahaven SIP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "viaa-chassis==0.2.1",
    "pulsar-client==3.7.0",
    "meemoo-cloudevents==v0.1.0-rc.3",
    "SIP.py==0.0.8",
    "requests==2.32.4",
    "jinja2==3.1.6",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.10",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "testcontainers==4.10.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --ignore=tests/transformator"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.setuptools.package-data]
"app" = ["**/*"]
